--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -151,11 +151,10 @@
     <br>
     <div id="center">
       <p><strong class="bibliografia">Figura 1:</strong> Isaac Newton</p>
-      <img src="Imagens/R (1).jpeg" alt="Isaac Newton" width="45%">
+      <img src="Imagens/isaacnewton2.webp" alt="Isaac Newton" width="35%">
     </div>
 
-    <legend  class="ref-imagens">Disponivel em:<a href="http://fisica-marian3.blogspot.com/">
-        http://fisica-marian3.blogspot.com/</a>
+    <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
     </legend>
     <br>
     <div id="center">
@@ -176,7 +175,8 @@
     <br>
     <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende
       ficar parado,
-      até venha alguém mexer nele, exemplo, um celular, se for deixado no sofá, ele ficará lá até alguém venha a pega-lo,
+      até venha alguém mexer nele, exemplo, um celular, se for deixado no sofá, ele ficará lá até alguém venha a
+      pega-lo,
       sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
       exemplo precisa-se ir lá para o espaço, já que lá não tem ar nem gravidade para atrapalhar, agora o
       exemplo é, alguém esta lá no espaço e joga uma caneta para qualquer lado, essa caneta irá continuar para sempre
@@ -189,8 +189,8 @@
       <p><strong class="bibliografia">Figura 2:</strong> Analogia a Primeira Lei de Newton </p>
       <img src="Imagens/tirinha.jpg" alt="Analogia a Primeira Lei de Newton" width="80%">
     </div>
-    <legend  class="ref-imagens-2">
-      <p>Disponivel em<a href="https://brainly.com.br/tarefa/18695505"> https://brainly.com.br/tarefa/18695505</a></p>
+    <legend class="ref-imagens-2">
+      <p>Fonte: MARTINS, 2023.</p>
     </legend>
     <br>
     <div id="center">
@@ -234,8 +234,7 @@
       <p><strong class="bibliografia">Figura 3:</strong> Demonstração da Segunda Lei de Newton</p>
       <img src="Imagens/segunda lei.webp" alt="Demonstração da Segunda Lei de Newton" width="70%">
     </div>
-    <legend class="ref-imagens-3">Disponivel em:<a
-        href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm</a>
+    <legend class="ref-imagens-3">Fonte: MELO, 2023.
     </legend>
     <br>
     <div id="center">
@@ -243,12 +242,13 @@
       </h1>
     </div>
     <br>
-    
-      <blockquote>“ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
-        para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
-        reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."</blockquote>
-        <br>
-        <p class="margem">
+
+    <blockquote>“ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação,
+      afirma que,
+      para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
+      reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."</blockquote>
+    <br>
+    <p class="margem">
       Mas FISICAMENTE FALANDO, ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
       vários exemplos. O primeiro, se alguém chutar uma pedra e jogá-la longe, mas a pedra também vai “chutar de volta”,
       parece estranho, mas calma, ao menos que o alguém seja um robô ao chutar a pedra sente dor, e essa dor é a reação
@@ -263,12 +263,16 @@
       <p><strong class="bibliografia">Figura 4:</strong> Demonstração da Terceira Lei de Newton-Lei</p>
       <img src="Imagens/terceiralei.webp" alt="Demonstração da Terceira Lei de Newton-Lei" width="70%">
     </div>
-    <legend class="ref-imagens-4">Disponivel em:<a
-        href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm">
-        https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm</a>
+    <legend class="ref-imagens-4">Fonte: HELERBROCK, 2023.
     </legend>
     <br>
     <h1 style="margin-left: 3cm ;"> Refêrencias </h1>
+    <br>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> GOUVEIA, ROSIMAR. <strong
+      class="bibliografia"> "Isaac Newton". </strong> Toda Matéria. Disponível em:
+    https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 2 de julho de 2023.
+  </p>
     <br>
     <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">
       HELERBROCK, Rafael. <strong class="bibliografia">"Primeira Lei de Newton". </strong> Brasil Escola. Disponível em:
@@ -276,17 +280,23 @@
     </p>
     <br>
     <br>
-    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> HELERBROCK, Rafael. <strong class="bibliografia"> "Terceira lei de
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> HELERBROCK, Rafael. <strong class="bibliografia">
+        "Terceira lei de
         Newton". </strong> Brasil Escola. Disponível em:
       https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm. Acesso em 19 de março de 2023.
     </p>
     <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> MARTINS, Fernando Henrique. <strong
+      class="bibliografia"> "As Leis de Newton: os princípios da mecânica clássica". </strong>  Curso Enem Gratuito. Disponível em:
+      https://cursoenemgratuito.com.br/leis-de-newton-fisica-enem/. Acesso em 2 de julho de 2023.
+  </p>
     <br>
-    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> MELO, Pâmella Raphaella. <strong class="bibliografia"> "Segunda lei
-      de Newton". </strong> Brasil Escola. Disponível em:
-    https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.
-  </p>  
-  <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> MELO, Pâmella Raphaella. <strong
+        class="bibliografia"> "Segunda lei
+        de Newton". </strong> Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.
+    </p>
+    <br>
   </div>
   <br>
   <div class="rodape">
