--- a/index.html
+++ b/index.html
@@ -165,9 +165,7 @@
   </div>
   </div>
   </div>
-  <div class="espaco1">
 
-  </div>
   <div class="caixas">
     <div id="caixa1">
       <strong class="cabeca1">Porque Você Deve Estudar Física?</strong>
@@ -212,9 +210,70 @@
       </div>
     </div>
   </div>
-  <div class="espaco1">
+  <br>
+  <br>
+  <div class="temas">
 
+    <h1><strong class="cabeca">
+      Assuntos
+    </strong></h1>
+
+    <a href="Ondas.html">
+      <div id="caixaOndas">
+        <p><strong class="cabeca12">Ondas</strong></p>
+        <img src="Imagens/ondas_alfa.jpg" width="60%" height="170vh" alt="">
+      </div>
+    </a>
+    <a href="Leis De Newton.html">
+      <div id="caixaLeis">
+        <p><strong class="cabeca12">Leis de Newton</strong></p>
+        <img
+          src="Imagens/as-leis-newton-estao-entre-as-mais-importantes-leis-fisica-sao-usadas-para-determinar-dinamica-dos-corpos-5bb2703f333e2.webp"
+          width="60%" height="170vh" alt="">
+      </div>
+    </a>
+    <a href="Mecanica.html">
+      <div id="caixaMecanica">
+        <p><strong class="cabeca12">Mecânica</strong></p>
+        <img src="Imagens/montanharussa.jpeg" width="60%" height="170vh" alt="">
+      </div>
+    </a>
+    <a href="Energia.html">
+      <div id="caixaEnergia">
+        <p><strong class="cabeca12">Energia</strong></p>
+        <img src="Imagens/energia.webp" width="60%" height="170vh" alt="">
+      </div>
+    </a>
+    <a href="Eletricidade.html">
+      <div id="caixaEletricidade">
+        <p><strong class="cabeca12">Eletricidade</strong></p>
+        <img src="Imagens/OIG (1).jpeg" width="60%" height="170vh" alt="">
+      </div>
+    </a>
+    <a href="CorrentesEletricas.html">
+      <div id="caixaCorrentes">
+        <p><strong class="cabeca12">Correntes Elétricas</strong></p>
+        <img src="Imagens/corretens.jpeg" width="60%" height="170vh" alt="">
+      </div>
+    </a>
+    <a href="Optica.html">
+      <div id="caixaOptica">
+        <p><strong class="cabeca12">Optica</strong></p>
+        <img src="Imagens/optica1.png" width="60%" height="170vh" alt="">
+      </div>
+    </a>
+    <a href="TermoFisica.html">
+      <div id="caixaTermofisica">
+        <p><strong class="cabeca12">TermoFísica</strong></p>
+        <img src="Imagens/termometro-5c3e0e41d5615.webp" width="60%" height="170vh" alt="">
+      </div>
+    </a>
   </div>
+<br>
+<br>
+<br>
+
+  <div class="espaco1"></div>
   <br>
   <div class="imagemEs">
     <div class="texto1">
@@ -243,24 +302,7 @@
           desafiam constantemente o nosso conhecimento.</p>
         <br>
       </div>
-    </div>
     <br>
-
-    <div class="texto2">
-      <div class="gato">
-        <h1><strong class="cabeca22">Continuando...</strong></h1>
-        <br>
-        <p id="textos2">Portanto , a física é uma ciência incrível e emocionante, cheia de descobertas e
-          possibilidades, oferecendo uma visão profunda sobre nosso universo e nos convidando a desvendar mistérios do
-          nosso mundo, desenvolvendo nosso pensamento e nos fazendo crescer como seres racionais.
-          Enfim, a física é de suma importância para o desenvolvimento da nossa sociedade atual, contribuindo para
-          basicamente todas as outras ciências atuais.
-        </p>
-        <br>
-      </div>
-
-
-    </div>
   </div>
   <div class="espaco"></div>
   <div class="rodape">
