--- a/index.html
+++ b/index.html
@@ -212,12 +212,13 @@
   </div>
   <br>
   <br>
-  <div class="temas">
-
+  <div id="center">
     <h1><strong class="cabeca">
-      Assuntos
-    </strong></h1>
-
+        Assuntos
+      </strong></h1>
+  </div>
+  <br>
+  <div class="temas">
     <a href="Ondas.html">
       <div id="caixaOndas">
         <p><strong class="cabeca12">Ondas</strong></p>
@@ -268,10 +269,11 @@
         <img src="Imagens/termometro-5c3e0e41d5615.webp" width="60%" height="170vh" alt="">
       </div>
     </a>
+    <br>
   </div>
-<br>
-<br>
-<br>
+  <br>
+  <br>
+  <br>
 
   <div class="espaco1"></div>
   <br>
@@ -302,79 +304,81 @@
           desafiam constantemente o nosso conhecimento.</p>
         <br>
       </div>
-    <br>
-  </div>
-  <div class="espaco"></div>
-  <div class="rodape">
+      <br>
+      
+    </div>
+    <div class="espaco"></div>
+    <br><br><br><br><br>  
+    <div class="rodape">
 
-    <div class="texto-rodape">
-      <div class="parte-rodape-esquerdo">
-        <strong class="cabeca12">
-          <h4>Desenvolvedores:
-          </h4>
-          <p>Anthony Gabriel Loche dos Reis</p>
-          <p>Claudio Anzini Neto</p>
-          <p>Gustavo Correa Kruger</p>
-          <p>Pedro Henrique da Silva Malaquias</p>
-          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
-        </strong>
+      <div class="texto-rodape">
+        <div class="parte-rodape-esquerdo">
+          <strong class="cabeca12">
+            <h4>Desenvolvedores:
+            </h4>
+            <p>Anthony Gabriel Loche dos Reis</p>
+            <p>Claudio Anzini Neto</p>
+            <p>Gustavo Correa Kruger</p>
+            <p>Pedro Henrique da Silva Malaquias</p>
+            <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+          </strong>
+        </div>
+
+
+        <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
+              alt="Logo IFC" width="300px"></strong></div>
+
+      </div>
+    </div>
+
+    <div id="magica">
+      <div id="star-wars">
+        <h2 class="star">Definição de Física</h2>
+        <p class="star">
+          No âmago do universo, onde estrelas dançam em sintonia,
+          reside a essência da ciência, a Física em sua harmonia.
+          Uma sinfonia cósmica, que desvenda segredos profundos,
+          Com a dança dos átomos, em movimentos vagabundos.
+        </p>
+        <p class="star">
+          A Física é a poetisa do cosmos, com sua pluma de luz,
+          Desvendando mistérios, revelando verdades seduz.
+          É a língua universal que a natureza escolheu,
+          Para contar histórias grandiosas que o Universo escreveu.
+        </p>
+        <p class="star">
+          Ela mergulha nas entranhas do espaço e do tempo,
+          Desvendando enigmas, como um sábio poema.
+          Com equações e fórmulas, desvela a realidade,
+          Em um ballet de partículas, dançando na eternidade.
+        </p>
+        <p class="star">
+          É na Física que o vento suspira em ondas sonoras,
+          E a luz, qual bailarina, atravessa as horas.
+          Os corpos se atraem, num abraço gravitacional,
+          Enquanto o tempo flui, em seu curso fenomenal.
+        </p>
+        <p class="star">
+          Das leis da termodinâmica à relatividade,
+          A Física tece o tecido da nossa realidade.
+          E nos olhos do cientista, brilha um sonho profundo,
+          De compreender o universo, em cada canto do mundo.
+        </p>
+        <p class="star">
+          Pois a Física é a melodia do Cosmos, uma canção,
+          Que ecoa nas mentes curiosas, com pura emoção.
+          Ela nos convida a dançar na valsa dos átomos,
+          A desvendar os mistérios cósmicos, em todos os planos.
+        </p>
+        <p class="star">
+          Assim, a Física nos inspira a contemplar o infinito,
+          A buscar respostas, num constante e eterno aflito.
+          E enquanto existir curiosidade em nossos corações,
+          A Física, bela e poética, seguirá suas criações.
+        </p>
       </div>
 
-
-      <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
-            alt="Logo IFC" width="300px"></strong></div>
-
     </div>
-  </div>
-
-  <div id="magica">
-    <div id="star-wars">
-      <h2 class="star">Definição de Física</h2>
-      <p class="star">
-        No âmago do universo, onde estrelas dançam em sintonia,
-        reside a essência da ciência, a Física em sua harmonia.
-        Uma sinfonia cósmica, que desvenda segredos profundos,
-        Com a dança dos átomos, em movimentos vagabundos.
-      </p>
-      <p class="star">
-        A Física é a poetisa do cosmos, com sua pluma de luz,
-        Desvendando mistérios, revelando verdades seduz.
-        É a língua universal que a natureza escolheu,
-        Para contar histórias grandiosas que o Universo escreveu.
-      </p>
-      <p class="star">
-        Ela mergulha nas entranhas do espaço e do tempo,
-        Desvendando enigmas, como um sábio poema.
-        Com equações e fórmulas, desvela a realidade,
-        Em um ballet de partículas, dançando na eternidade.
-      </p>
-      <p class="star">
-        É na Física que o vento suspira em ondas sonoras,
-        E a luz, qual bailarina, atravessa as horas.
-        Os corpos se atraem, num abraço gravitacional,
-        Enquanto o tempo flui, em seu curso fenomenal.
-      </p>
-      <p class="star">
-        Das leis da termodinâmica à relatividade,
-        A Física tece o tecido da nossa realidade.
-        E nos olhos do cientista, brilha um sonho profundo,
-        De compreender o universo, em cada canto do mundo.
-      </p>
-      <p class="star">
-        Pois a Física é a melodia do Cosmos, uma canção,
-        Que ecoa nas mentes curiosas, com pura emoção.
-        Ela nos convida a dançar na valsa dos átomos,
-        A desvendar os mistérios cósmicos, em todos os planos.
-      </p>
-      <p class="star">
-        Assim, a Física nos inspira a contemplar o infinito,
-        A buscar respostas, num constante e eterno aflito.
-        E enquanto existir curiosidade em nossos corações,
-        A Física, bela e poética, seguirá suas criações.
-      </p>
-    </div>
-
-  </div>
 
   </div>
 </body>
