Update Leis De Newton.html

--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -136,6 +136,7 @@
     </div>
   </div>
   </div>
+  <br> 
   <div class="conteudo">
     <br>
     <div id="center">
@@ -174,7 +175,7 @@
       sobre ele se anulem."
     </blockquote>
     <br>
-    <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende
+    <p class="margem">A Lei da Inércia significa que: se algo está parado esse algo pretende
       ficar parado,
       até venha alguém mexer nele, exemplo, um celular, se for deixado no sofá, ele ficará lá até alguém venha a
       pega-lo,
@@ -212,7 +213,7 @@
       aceleração é proporcional à sua massa."
     </blockquote>
     <br>
-    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que se for aplicado uma força proporcionalmente a massa
+    <p class="margem">Esta lei diz que se for aplicado uma força proporcionalmente a massa
       do corpo que se quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
     </p>
     <p class="margem">Um exemplo assim: há duas bolas num campo de futebol, dispensando a
@@ -250,7 +251,7 @@
       reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."</blockquote>
     <br>
     <p class="margem">
-      Mas FISICAMENTE FALANDO, ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
+      Ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
       vários exemplos. O primeiro, se alguém chutar uma pedra e jogá-la longe, mas a pedra também vai “chutar de volta”,
       parece estranho, mas calma, ao menos que o alguém seja um robô ao chutar a pedra sente dor, e essa dor é a reação
       sobre a ação de chutar. Outro exemplo é quando se precisa empurrar algo pesado, uma geladeira pro caso, se alguém
