--- a/index.html
+++ b/index.html
@@ -144,11 +144,12 @@
         </button></a>
       <br>
     </div>
-
+<div class="buscas">
     <div id="main">
       <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
         </div></span>
     </div>
+  </div>
   </div>
 
 
@@ -158,7 +159,7 @@
     <div id="center">
       <br>
       <button type="button" class="btn1" style="width: 300px;" onclick="click_starwars();">
-        <strong style="font-size: 20px;">Definição de Física</strong>
+        <strong style="font-size: 20px; color: white;">Definição de Física</strong>
       </button>
     </div>
     <br>
@@ -213,7 +214,7 @@
   <br>
   <br>
   <div id="center">
-    <h1><strong class="cabeca">
+    <h1><strong class="cabeca-white">
         Assuntos
       </strong></h1>
   </div>
@@ -221,13 +222,13 @@
   <div class="temas">
     <a href="Ondas.html">
       <div id="caixaOndas">
-        <p><strong class="cabeca12">Ondas</strong></p>
+        <p><strong class="cabeca12-white">Ondas</strong></p>
         <img src="Imagens/ondas_alfa.jpg" width="60%" height="170vh" alt="">
       </div>
     </a>
     <a href="Leis De Newton.html">
       <div id="caixaLeis">
-        <p><strong class="cabeca12">Leis de Newton</strong></p>
+        <p><strong class="cabeca12-white">Leis de Newton</strong></p>
         <img
           src="Imagens/as-leis-newton-estao-entre-as-mais-importantes-leis-fisica-sao-usadas-para-determinar-dinamica-dos-corpos-5bb2703f333e2.webp"
           width="60%" height="170vh" alt="">
@@ -235,37 +236,37 @@
     </a>
     <a href="Mecanica.html">
       <div id="caixaMecanica">
-        <p><strong class="cabeca12">Mecânica</strong></p>
+        <p><strong class="cabeca12-white">Mecânica</strong></p>
         <img src="Imagens/montanharussa.jpeg" width="60%" height="170vh" alt="">
       </div>
     </a>
     <a href="Energia.html">
       <div id="caixaEnergia">
-        <p><strong class="cabeca12">Energia</strong></p>
+        <p><strong class="cabeca12-white">Energia</strong></p>
         <img src="Imagens/energia.webp" width="60%" height="170vh" alt="">
       </div>
     </a>
     <a href="Eletricidade.html">
       <div id="caixaEletricidade">
-        <p><strong class="cabeca12">Eletricidade</strong></p>
+        <p><strong class="cabeca12-white">Eletricidade</strong></p>
         <img src="Imagens/OIG (1).jpeg" width="60%" height="170vh" alt="">
       </div>
     </a>
     <a href="CorrentesEletricas.html">
       <div id="caixaCorrentes">
-        <p><strong class="cabeca12">Correntes Elétricas</strong></p>
+        <p><strong class="cabeca12-white">Correntes Elétricas</strong></p>
         <img src="Imagens/corretens.jpeg" width="60%" height="170vh" alt="">
       </div>
     </a>
     <a href="Optica.html">
       <div id="caixaOptica">
-        <p><strong class="cabeca12">Optica</strong></p>
+        <p><strong class="cabeca12-white">Optica</strong></p>
         <img src="Imagens/optica1.png" width="60%" height="170vh" alt="">
       </div>
     </a>
     <a href="TermoFisica.html">
       <div id="caixaTermofisica">
-        <p><strong class="cabeca12">TermoFísica</strong></p>
+        <p><strong class="cabeca12-white">TermoFísica</strong></p>
         <img src="Imagens/termometro-5c3e0e41d5615.webp" width="60%" height="170vh" alt="">
       </div>
     </a>
