--- a/Ondas.html
+++ b/Ondas.html
@@ -144,16 +144,18 @@
         </button></a>
       <br>
     </div>
-<div class="buscas">
-    <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
-        </div></span>
+    <div class="buscas">
+      <div id="main">
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+          </div></span>
+      </div>
     </div>
   </div>
-  </div>
+  <br>
   <div class="conteudo">
+    <br>
     <div id="center">
-      <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
+      <h1 style="font-size: 12pt;"> FENOMENOS ONDULATORIOS </h1>
     </div>
     <br>
     <p class="margem">Nesta página será abordado conteúdo sobre Fenômenos Ondulatórios, Ondas, Tipos de Ondas e etc.
@@ -167,17 +169,14 @@
     </blockquote>
     </p>
     <br>
-    <p class="margem">
-      Mas FISICAMENTE falando onda é algo invisível a olho nú e que tem a função de levar energia a algum lugar.
-    </p>
 
-    <br>
     <div id="center">
-      <img src="Imagens/ondapartes.png" alt="partes das ondas" width="80%px">
-      <legend style="text-align: center;"><a href="https://www.youtube.com/watch?v=M2D5-zXlD6A"> Imagem Dísponivel
-          Aqui</a>
-      </legend>
+      <p><strong class="bibliografia">Figura 1:</strong> Onda e Suas Partes </p>
+      <img src="Imagens/ondapartes.png" alt="partes das ondas" width="50%">
     </div>
+    <legend class="ref-imagens5">Fonte: LOOS, 2020
+    </legend>
+
     <br>
     <p class="margem"> Os pontos mais altos são chamados de cristas, e os mais baixos são chamados de vales, a distância
       entre o começo
@@ -193,9 +192,10 @@
     <p class="margem"> E tendo esses dados podemos dizer que tipo de onda é, pois cada tipo de onda tem Período,
       Amplitude etc
       "específicas", e o meio que usamos para isso é medir a velocidade com que a onda se propaga com a fórmula
-      Velocidade(V)= Comprimento da onda (que é a distância entre uma crista e outra, ou um vale e outro (HELERBROCK,
-      2023). Geralmente medido em Metros(M) ) e a Frequência que é medida em Hertz (Hz) logo tendo a fórmula V= C x F
-      assim como mostrado na Figura 2. Ou também pode aparecer desse jeito segundo HELERBROCK, Rafael.</p>
+      Velocidade(V)= Comprimento da onda (que é a distância entre uma crista e outra, ou um vale e outro . Geralmente
+      medido em Metros(M) ) e a Frequência que é medida em Hertz (Hz) logo tendo a fórmula V= C x F
+      assim como mostrado na Figura 2. Ou também pode aparecer desse jeito segundo (HELERBROCK,
+      2023).</p>
     <p class="margem">v = velocidade de propagação da onda (m/s)</p>
     <p class="margem"> λ = comprimento de onda (m)
     </p>
@@ -204,7 +204,7 @@
     </p>
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo"> Longitudinais e Transversais </strong></h3>
+      <h1 style="font-size: 12pt;"> LONGITUDINAIS E TRANSVERSAIS </h1>
     </div>
     <br>
     <p class="margem">
@@ -216,20 +216,247 @@
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais">
-      <legend>Disponivel em:<a href="https://mundoeducacao.uol.com.br/fisica/ondas-2.htm"> Ondas. Conceito, natureza e
-          tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
+      <p><strong class="bibliografia">Figura 2:</strong> Ondas Longitudinais e Transversais </p>
+      <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais" width="40%">
     </div>
+    <legend class="ref-imagens6">Fonte: BORGES, 2021
+    </legend>
+
     <br>
     <p class="margem"> Algo que também é legal destacar são que ondas podem se propagar de forma unidimensional,
       bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características"
       próprias (LOOS, 2023).</p>
+    <br>
+    <div id="center">
+      <h1 style="font-size: 12pt;"> TIPOS DE ONDAS </h1>
+    </div>
+    <br>
+    <p class="margem"><strong class="bibliografia"> Eletromagnéticas:</strong> Segundo Rosimar Gouveia, ondas
+      eletromagnéticas são ondas tridimensionais que se propagam na velocidade da luz e podem se propagar em qualquer
+      lugar, como no vácuo do espaço ou na terra, sem necessitar de um material para percorrer, um exemplo é a
+      luz.(HELERBROCK, 2023)
+    </p>
+    <br>
+    <p class="margem"><strong class="bibliografia">Mecânicas: </strong> Já as ondas mecânicas necessitam de algo para
+      transitar como ar, água, ou algum material, um exemplo é o som, e como essas ondas precisam de algo para percorrer
+      não podem se propagar no espaço (GOUVEIA, 2023).
+    </p>
+    <br>
+    <p class="margem"><strong class="bibliografia"> Gravitacionais:</strong> E as ondas gravitacionais, são as ondas que
+      ocorrem quando dois corpos de grande massa colidem e geram ondas gravitacionais. Esse tipo de onda também não
+      necessita de algo para se propagar, podendo assim se propagar no vácuo do espaço (HELERBROCK, 2023).
+    </p>
+    <br>
+    <p class="margem">Mas dentro das ondas eletromagnéticas, mecânicas e gravitacionais existem seus tipos.
+      Segundo Rafael Helerbrock existem os tipos mais famosos de ondas eletromagnéticas e que aparecem no nosso
+      cotidiano, como:
+    </p>
+    <br>
+    <p class="margem"><strong class="bibliografia"> Ondas de rádio:</strong> são ondas que fazem oscilações em
+      partículas e conseguem transmitir energia na
+      forma de falar, com, mensagem e etc; da água, e é por isso que quando você utiliza o microondas para esquentar
+      algo que tenha mais água esse alimento esquenta mais rápido, pois suas ondas se comportam como a da água presente
+      no alimento (GOUVEIA, 2023);
+    </p>
+    <br>
+    <p class="margem"><strong class="bibliografia"> Infravermelho:
+      </strong>promove a vibração molecular, é uma das principais formas de transmissão de calor (HELERBROCK, 2023);</p>
+    <br>
+    <p class="margem"><strong class="bibliografia"> Luz visível:
+      </strong>é bem provável que seja necessário uma página inteira apenas para falar da luz, mas a luz é composta de
+      uma partícula chamada fóton e que se comporta como onda (HELERBROCK, 2023);
+    </p>
+    <br>
+    <p class="margem"><strong class="bibliografia">Ultravioleta:</strong> promove o agitamento dos elétrons, e que pode
+      “jogar” elétrons para fora da camada de
+      valência(última camada do átomo) (HELERBROCK, 2023);</p>
+    <br>
+    <p class="margem"><strong class="bibliografia"> Raios x:
+      </strong>é como se você jogasse um fóton em um átomo e ele jogasse fora um elétrons, como se um fóton e um átomo
+      colidisse e um elétron fosse ejetado, e depois o átomo devolve esse fóton em uma menor frequência (HELERBROCK,
+      2023);</p>
+    <br>
+    <p class="margem"><strong class="bibliografia">Raios gama:
+      </strong>raios gama são ondas que são emitidas de elementos radioativos, podem ser emitidos naturalmente por
+      átomos instáveis ou por fissão ou fusão nuclear. Essa onda é emitida quando um átomo tem seu núcleo instável e
+      para não explodir precisa emitir radiação para se estabilizar. A radiação Alfa e Beta também são radiações, mas ao
+      contrário da gama a Alfa e Beta são partículas que se comportam como ondas (HELERBROCK, 2023);</p>
+    <br>
+    <p class="margem">As ondas Mecânicas são divididas em unidimensionais, bidimensionais e tridimensionais, como já foi
+      dito no texto
+      (GUILHERME, 2023). </p>
+    <br>
+    <div id="center">
+      <h1 style="font-size: 12pt;"> FENOMENOS </h1>
+    </div>
+    <br>
+    <p class="margem">Segundo Rafael Helerbrock ondas conforme vão se propagando pelos lugares se comportam de uma
+      forma, e dependendo do lugar e condições que se propagam acontecem fenômenos que serão listados aqui:</p>
 
+    <p class="margem"><strong class="bibliografia"> Refração:
+      </strong>Segundo Rosimar Gouveia a refração é o fenômeno que acontece quando a onda está percorrendo e encontra
+      algo no caminho, mas continua propagando só que em um sentido diferente, assim como está sendo mostrado na imagem;
+    </p>
+    <br>
+    <div id="center">
+      <p><strong class="bibliografia">Figura 3:</strong> Refração </p>
+      <img src="Imagens/refracao-luz.webp" alt="Longitudinais e Transversais" width="40%">
+    </div>
+    <legend class="ref-imagens6">Fonte: BORGES, 2021
+    </legend>
+
+    <br>
+    <p class="margem"><strong class="bibliografia"> Difração:</strong>
+      A difração é quando uma onda atinge algo e acaba mudando sua forma de propagação, a onda neste caso contorna os
+      obstáculos. Um exemplo é quando ouvimos um som mesmo se ele estiver sendo emitido do outro lado de uma parede
+      (GOUVEIA, 2023).
+    </p>
+    <br>
+    <div id="center">
+      <p><strong class="bibliografia">Figura 4:</strong> Ondas Longitudinais e Transversais </p>
+      <img src="Imagens/difracao.jpg" alt="Longitudinais e Transversais" width="40%">
+    </div>
+    <legend class="ref-imagens6">Fonte: BORGES, 2021
+    </legend>
+
+    <br>
+    <p class="margem"><strong class="bibliografia"> Absorção:
+      </strong>
+      Segundo Pâmella Raphaella Melo a absorção é o fenômeno quando a luz é emitida e bate em um corpo, então dependendo
+      do corpo a luz será refletida ou não, assim como mostrado na imagem.
+    </p>
+    <br>
+    <div id="center">
+      <p><strong class="bibliografia">Figura 5:</strong> Absorção </p>
+      <img src="Imagens/1-absorcao-reflexao-luz.webp" alt="Longitudinais e Transversais" width="40%">
+    </div>
+    <legend class="ref-imagens6">Fonte: MELO, 2018
+    </legend>
+
+    <br>
+    <p class="margem"><strong class="bibliografia"> Ressonância:
+      </strong>
+      A ressonância é o fenômeno quando corpos recebem ondas semelhantes passam a emitir esta onda com maior força e
+      também vibrar na mesma frequência. Um ótimo exemplo é uma das formas de afinar um instrumento musical, existe uma
+      ferramenta chamada diapasão, e que vibra em uma certa frequência quando algo bate nele, então você vai apertando
+      ou soltando as cordas até que a vibração seja parecida com a emitida pelo diapasão (MELÔ, 2023).
+    </p>
+    <br>
+    <div id="center">
+      <p><strong class="bibliografia">Figura 6:</strong> Ressonância </p>
+      <img src="Imagens/ressonancia-diapasao.webp" alt="Longitudinais e Transversais" width="40%">
+    </div>
+    <legend class="ref-imagens6">Fonte: MELO, 2018
+    </legend>
+
+    <br>
+    <p class="margem"><strong class="bibliografia"> Interferência:
+      </strong>
+      A interferência é quando duas ondas interagem, e ou se aniquilam ou se tornam uma só. Dizemos que é interferência
+      construtiva quando as ondas se juntam e formam uma nova onda maior e com mais amplitude, e quando a interferência
+      é destrutiva é quando duas ondas se chocam e formam uma uma onda muito fraca ou se aniquilam e é anulada. Um
+      exemplo é quando duas pessoas estão fazendo uma ligação telefônica um perto do outro, as ondas de informações se
+      chocam e geram ruídos (MELÔ, 2023).
+    </p>
+    <br>
+    <div id="center">
+      <p><strong class="bibliografia">Figura 7:</strong> Interferência </p>
+      <img src="Imagens/interferencia-construtiva-destrutiva.webp" alt="Longitudinais e Transversais" width="40%">
+    </div>
+    <legend class="ref-imagens6">Fonte: MELO, 2018
+    </legend>
+
+    <br>
+    <p class="margem"><strong class="bibliografia"> Dispersão:
+      </strong>
+      A dispersão é quando uma onda atinge um corpo e decompõe seus elementos em várias ondas de características
+      diferentes(amplitude, frequência e etc) (MELÔ, 2023).
+    </p>
+    <br>
+    <div id="center">
+      <p><strong class="bibliografia">Figura 8:</strong> Dispersão </p>
+      <img src="Imagens/1-dispersao-luz-solar.webp" alt="Longitudinais e Transversais" width="40%">
+    </div>
+    <legend class="ref-imagens6">Fonte: MELO, 2018
+    </legend>
+
+    <br>
+    <p class="margem"><strong class="bibliografia"> Polarização:
+      </strong>
+      A polarização acontece quando duas ondas transversais estão “andando” juntas, mas ao passar por uma ferramenta chamada “polarizador” uma destas ondas é filtrada e apenas uma delas passa. Isso acontece quando você vai tirar uma foto e seu celular filtra as ondas para aparecer apenas o interessado na foto (MELÔ, 2023).      
+    </p>
+    <br>
+    <div id="center">
+      <p><strong class="bibliografia">Figura 9:</strong> Polarização </p>
+      <img src="Imagens/polarizacao-feixe-luz.webp" alt="Longitudinais e Transversais" width="40%">
+    </div>
+    <legend  class="ref-imagens6">Fonte: MELO, 2018
+    </legend>
+    
+    <br>
+    <h1 style="margin-left: 3cm ;"> Refêrencias </h1>
+    <br>
+    <br>
+
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> HELERBROCK, Rafael. <strong
+      class="bibliografia"> "O que é onda?". </strong> Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/o-que-e/fisica/o-que-e-onda.htm. Acesso em 13 de Mar de 2023.
+  </p>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">
+      HELERBROCK, Rafael. <strong class="bibliografia">"Classificação das ondas"; </strong> Brasil Escola. Disponível em: https://brasilescola.uol.com.br/fisica/a-classificacao-das-ondas.htm. Acesso em 14 de Mar de 2023. 
+    </p>
+    <br>
+     
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> LOOS, Pedro. <strong class="bibliografia">
+      “O  que é uma onda?” </strong> Ciência Todo Dia. Disponível em:
+      https://www.youtube.com/watch?v=M2D5-zXlD6A&t=7s. Acesso em 13 de março de 2023.
+    </p>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> GOUVEIA, Rosimar. <strong
+      class="bibliografia"> "Ondas". </strong>  Toda Materia. Disponível em:
+      https://www.todamateria.com.br/ondas/. Acesso em 14 Mar. 2023.
+  </p>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> BORGES, Frederico. <strong
+        class="bibliografia"> "Ondas". </strong> Mundo Educação. Disponível em:
+        https://mundoeducacao.uol.com.br/fisica/ondas-2.htm. Acesso em 13 Mar. 2023.
+    </p>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> CARDOSO, Mayara <strong
+      class="bibliografia"> “Modelo Atômico de Broglie”. </strong> InfoEscola. Disponível em:
+      https://www.infoescola.com/quimica/modelo-atomico-de-broglie/. Acesso em 13 Mar. 2023.
+  </p> 
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> GUILHERME, Luiz. <strong
+      class="bibliografia"> "Ondas mecânicas". </strong> Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/ondas-mecanicas.htm. Acesso em 18 Mar. 2023.
+  </p>
+  <br>
+  <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> MELÔ, Pâmella. <strong
+    class="bibliografia"> "Ondulatória". </strong> Mundo Educação. Disponível em:
+    https://brasilescola.uol.com.br/fisica/ondas-mecanicas.htm. Acesso em 18 Mar. 2023.
+</p>
+<br>
   </div>
+  <br>
+  <div class="rodape">
 
-
-  <div class="rodape"></div>
-
+    <div class="texto-rodape">
+      <div class="parte-rodape-esquerdo">
+        <strong class="cabeca12">
+          <h4>Desenvolvedores:
+          </h4>
+          <p>Anthony Gabriel Loche dos Reis</p>
+          <p>Claudio Anzini Neto</p>
+          <p>Gustavo Correa Kruger</p>
+          <p>Pedro Henrique da Silva Malaquias</p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        </strong>
+      </div>
+      <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
+            alt="Logo IFC" width="300px"></strong></div>
+    </div>
+  </div>
 </body>
-
 </html>
